Fixed quotes and spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 html {
   box-sizing: border-box;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   color: white;
- }
+}
 
 *, *::before, *::after {
   box-sizing: inherit;
